fix, feat: woo store order edit and pay page designlib already added items disable btn new mngorder tab widgets woo storeorderedit and orderpay visible

--- a/src/assets/css/designlib.css
+++ b/src/assets/css/designlib.css
@@ -171,6 +171,8 @@ p {
 .disabled {
   background-color: #ff7653;
   cursor: not-allowed;
+  pointer-events: none;
+  opacity: 0.6;
 }
 
 .stock-avail {
