--- a/src/assets/css/storeorder.css
+++ b/src/assets/css/storeorder.css
@@ -28,6 +28,20 @@
     gap: 3rem;
     align-items: center;
     margin: 1.5rem 0rem;
+    margin-bottom: -0.5rem;
+}
+
+hr {
+    height: 1px;
+    width: 100%;
+    border: none;
+    background-color: #F05A30;
+    margin-bottom: 1rem;
+}
+
+.tab-widget {
+    display: flex;
+    flex-direction: column;
 }
 
 .store-selectors a {
@@ -44,7 +58,7 @@
 }
 
 .active-store {
-    border-bottom: 1px solid #F05A30;
+    /* border-bottom: 1px solid #F05A30; */
     color: #F05A30
 }
 
@@ -168,4 +182,29 @@ table a:visited {
     color: hsl(136, 100%, 28%);
     text-decoration: none;
     font-size: 0.8rem;
+}
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-bottom-color: #FF3D00;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.removed {
+    display: none;
 }
